Lesson#21 Implemented action to delete task via API
